# Cat-GoGo

./: .gitignore  啟動程式.bat
.github/workflows/: build.yml
backend/: config.py  main.py  python-backend.spec  run_server.py
backend/routers/: stocks.py
backend/schemas/: filter.py  stock.py  turnover.py
backend/services/: data_fetcher.py  enhanced_kline_service.py  high_turnover_analyzer.py  stock_filter.py
backend/static/: index.html
backend/static/assets/: index-B2UHqkB0.js  index-Bs04x-03.css  index-C_ASywDi.js  index-HHL4cg6d.css  index-raq9YmEh.js
backend/utils/: export.py
frontend/: package-lock.json  package.json
frontend/src/: index.css
frontend/src-tauri/: Cargo.toml  tauri.conf.json
frontend/src-tauri/binaries/: python-backend.sh
frontend/src-tauri/src/: lib.rs
frontend/src/components/: FilterPanel.tsx  StockAnalysisDialog.tsx
frontend/src/components/charts/: DrawingTools.tsx  InteractiveChartContainer.tsx  LightweightKLineChart.tsx
frontend/src/pages/: HighTurnoverPage.tsx  HomePage.tsx  Top20TurnoverLimitUpPage.tsx
frontend/src/store/: store.ts
frontend/src/types/: index.ts
安裝包/: 啟動貓星人賺大錢.command
